--- a/Barra_navegacion_fija.html
+++ b/Barra_navegacion_fija.html
@@ -38,24 +38,31 @@
 	</section>
 	<div class="capa1">
 	<section>
+		<h2>Perros</h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt nunc ut orci dictum, tincidunt egestas dui sagittis. Maecenas quis odio felis. Donec turpis ex, venenatis eget urna vel, congue rhoncus arcu. Nulla convallis ut sapien nec lacinia. Duis molestie molestie metus, quis euismod felis dictum id. Cras ac vestibulum metus, vitae congue nulla. Suspendisse consectetur, elit sit amet pharetra suscipit, mi sapien aliquam nunc, laoreet molestie urna urna vitae ipsum. Mauris felis neque, accumsan ac dolor euismod, cursus lacinia enim. Donec ligula arcu, lacinia nec diam eget, malesuada fermentum ex. Duis dictum bibendum quam non faucibus. Integer a rutrum mauris. In a libero ac metus sagittis dapibus eget consectetur libero.	
 		</p>
+		<h2>Gatos</h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt nunc ut orci dictum, tincidunt egestas dui sagittis. Maecenas quis odio felis. Donec turpis ex, venenatis eget urna vel, congue rhoncus arcu. Nulla convallis ut sapien nec lacinia. Duis molestie molestie metus, quis euismod felis dictum id. Cras ac vestibulum metus, vitae congue nulla. Suspendisse consectetur, elit sit amet pharetra suscipit, mi sapien aliquam nunc, laoreet molestie urna urna vitae ipsum. Mauris felis neque, accumsan ac dolor euismod, cursus lacinia enim. Donec ligula arcu, lacinia nec diam eget, malesuada fermentum ex. Duis dictum bibendum quam non faucibus. Integer a rutrum mauris. In a libero ac metus sagittis dapibus eget consectetur libero.	
 		</p>
+		<h2>Conejos</h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt nunc ut orci dictum, tincidunt egestas dui sagittis. Maecenas quis odio felis. Donec turpis ex, venenatis eget urna vel, congue rhoncus arcu. Nulla convallis ut sapien nec lacinia. Duis molestie molestie metus, quis euismod felis dictum id. Cras ac vestibulum metus, vitae congue nulla. Suspendisse consectetur, elit sit amet pharetra suscipit, mi sapien aliquam nunc, laoreet molestie urna urna vitae ipsum. Mauris felis neque, accumsan ac dolor euismod, cursus lacinia enim. Donec ligula arcu, lacinia nec diam eget, malesuada fermentum ex. Duis dictum bibendum quam non faucibus. Integer a rutrum mauris. In a libero ac metus sagittis dapibus eget consectetur libero.	
 		</p>
+		<h2>Hamsters</h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt nunc ut orci dictum, tincidunt egestas dui sagittis. Maecenas quis odio felis. Donec turpis ex, venenatis eget urna vel, congue rhoncus arcu. Nulla convallis ut sapien nec lacinia. Duis molestie molestie metus, quis euismod felis dictum id. Cras ac vestibulum metus, vitae congue nulla. Suspendisse consectetur, elit sit amet pharetra suscipit, mi sapien aliquam nunc, laoreet molestie urna urna vitae ipsum. Mauris felis neque, accumsan ac dolor euismod, cursus lacinia enim. Donec ligula arcu, lacinia nec diam eget, malesuada fermentum ex. Duis dictum bibendum quam non faucibus. Integer a rutrum mauris. In a libero ac metus sagittis dapibus eget consectetur libero.	
 		</p>
+		<h2>Pajaros</h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt nunc ut orci dictum, tincidunt egestas dui sagittis. Maecenas quis odio felis. Donec turpis ex, venenatis eget urna vel, congue rhoncus arcu. Nulla convallis ut sapien nec lacinia. Duis molestie molestie metus, quis euismod felis dictum id. Cras ac vestibulum metus, vitae congue nulla. Suspendisse consectetur, elit sit amet pharetra suscipit, mi sapien aliquam nunc, laoreet molestie urna urna vitae ipsum. Mauris felis neque, accumsan ac dolor euismod, cursus lacinia enim. Donec ligula arcu, lacinia nec diam eget, malesuada fermentum ex. Duis dictum bibendum quam non faucibus. Integer a rutrum mauris. In a libero ac metus sagittis dapibus eget consectetur libero.	
 		</p>
+		<h2>Patos</h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt nunc ut orci dictum, tincidunt egestas dui sagittis. Maecenas quis odio felis. Donec turpis ex, venenatis eget urna vel, congue rhoncus arcu. Nulla convallis ut sapien nec lacinia. Duis molestie molestie metus, quis euismod felis dictum id. Cras ac vestibulum metus, vitae congue nulla. Suspendisse consectetur, elit sit amet pharetra suscipit, mi sapien aliquam nunc, laoreet molestie urna urna vitae ipsum. Mauris felis neque, accumsan ac dolor euismod, cursus lacinia enim. Donec ligula arcu, lacinia nec diam eget, malesuada fermentum ex. Duis dictum bibendum quam non faucibus. Integer a rutrum mauris. In a libero ac metus sagittis dapibus eget consectetur libero.	
 		</p>
+		<h2>Tortugas</h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt nunc ut orci dictum, tincidunt egestas dui sagittis. Maecenas quis odio felis. Donec turpis ex, venenatis eget urna vel, congue rhoncus arcu. Nulla convallis ut sapien nec lacinia. Duis molestie molestie metus, quis euismod felis dictum id. Cras ac vestibulum metus, vitae congue nulla. Suspendisse consectetur, elit sit amet pharetra suscipit, mi sapien aliquam nunc, laoreet molestie urna urna vitae ipsum. Mauris felis neque, accumsan ac dolor euismod, cursus lacinia enim. Donec ligula arcu, lacinia nec diam eget, malesuada fermentum ex. Duis dictum bibendum quam non faucibus. Integer a rutrum mauris. In a libero ac metus sagittis dapibus eget consectetur libero.	
 		</p>
