--- a/contacto.html
+++ b/contacto.html
@@ -26,5 +26,19 @@
 <div class="Tcont">
 	<img src="casadR.jpg" alt="Museo del Rebozo">
 </div>
+<ul>
+	<li><h3>Dirección:</h3>Calle Pascual M. Hernández Segura No. 85, Centro, C.P. 79560, Santa María del Río, San Luis Potosí</li>
+	<li><h3>Teléfono: </h3>(444) 284 89 54</li>
+	<li><h3>Correo Electrónico:</h3> artesanluis@slp.gob.mx.</li>
+	<li><h3>Horario de Atención:</h3>Lunes a viernes de 10:00 a 14:00 horas.</li>
+	<li><h3>Redes Sociales:</h3>
+	 <ul>
+	 	<li>Facebook: @delrebozo</li>
+	 	<li>Instagram: @casadelrebozo</li>
+	 	<li>X (anteriormente Twitter): @delrebozo</li>
+	 	
+	 </ul></li>
+</ul>
+ 
 </body>
 </html>
