--- a/index.html
+++ b/index.html
@@ -65,5 +65,32 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
 	</section>
+	<section>
+	<h2>Practicas Portafolio </h2>
+	<ol type="a">
+	<li>Lenguaje HTML</li>
+	<li>Lenguaje HTML avanzado</li>
+	<li>Hojas de estilo CSS</li>
+	<li>JavaScript</li>
+	<li>Sitios responsivos</li>
+	</ol>
+	
+	<ul>
+	<li>Inicio</li>
+	<li>Parcial 1</li>
+	<ol>
+	<li>Practica 1</li>
+	<li>Practica 2</li>
+	<li>Practica 3</li>
+	</ol>
+	
+	<li>Parcial 2</li>
+	<li>Parcial 3</li>
+	<li>Proyecto Final</li>
+	</ul>
+	
+	</section>
+
+
 </body>
 </html>
