--- a/Formulario.html
+++ b/Formulario.html
@@ -49,7 +49,7 @@
                 <tr>
                     <td><label for="pais">País:</label></td>
                     <td>
-                        <select id="pais" name="pais">
+                        <select id="pais" name="pais" size="3">
                             <datalist>
                             <option value="mexico">México</option>
                             <option value="canada">Canadá</option>
