--- a/Formulario.html
+++ b/Formulario.html
@@ -123,7 +123,7 @@
                     </td>
                     <td><label for="ciudad">Ciudad:</label></td>
                     <td>
-                        <select id="ciudad" name="ciudad">
+                        <select id="ciudad" name="ciudad" size="3">
                             <datalist>
                             <option value="slp">San Luis Potosí</option>
                             <option value="monterrey">Monterrey</option>
