--- a/Formulario.html
+++ b/Formulario.html
@@ -49,7 +49,7 @@
                 <tr>
                     <td><label for="pais">País:</label></td>
                     <td>
-                        <select id="pais" name="pais" size="3">
+                        <select id="pais" name="pais">
                             <datalist>
                             <option value="mexico">México</option>
                             <option value="canada">Canadá</option>
@@ -123,7 +123,7 @@
                     </td>
                     <td><label for="ciudad">Ciudad:</label></td>
                     <td>
-                        <select id="ciudad" name="ciudad" size="3">
+                        <select id="ciudad" name="ciudad">
                             <datalist>
                             <option value="slp">San Luis Potosí</option>
                             <option value="monterrey">Monterrey</option>
