--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
 	</ol>
 	
 	<li>Parcial 2</li>
+	<ol>
+		<li>Practica 1</li>
+		<a href="Formulario.html">Formulario</a>
+		<li>Practica 2</li>
+		<li>Practica 3</li>
+		<li>Practica 4</li>
+		<li>Practica 5</li>
+		<li>Practica 6</li>
+		<li>Practica 7</li>
+		<li>Practica 8</li>
+		<li>Practica 9</li>
+		<li>Practica 10</li>
+	</ol>
 	<li>Parcial 3</li>
 	<li>Proyecto Final</li>
 	</ul>
