--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 		<li>Practica 1</li>
 		<a href="Formulario.html">Formulario</a>
 		<li>Practica 2</li>
+		<a href="Practica Forms.html">Formulario</a>
 		<li>Practica 3</li>
 		<li>Practica 4</li>
 		<li>Practica 5</li>
