--- a/index.html
+++ b/index.html
@@ -82,15 +82,23 @@
 		<li>Practica 1</li>
 		<a href="Formulario.html">Formulario</a>
 		<li>Practica 2</li>
-		<a href="Practica Forms.html">Formulario</a>
+		<a href="Practica Forms.html">Formulario con CSS</a>
 		<li>Practica 3</li>
+		<a href="Tablas.html">Tabla con CSS</a>
 		<li>Practica 4</li>
+		<a href="BarraNav1.html">Barra de Navegacion</a>
 		<li>Practica 5</li>
+		<a href="Barra_navegacion_fija.html">Barra de Navegacion Fija</a>
 		<li>Practica 6</li>
+		<a href=".html"></a>
 		<li>Practica 7</li>
+		<a href="flexbox.html">Flexbox</a>
 		<li>Practica 8</li>
+		<a href="Position.html">Propiedades Position y z-index</a>
 		<li>Practica 9</li>
-		<li>Practica 10</li>
+		<a href="unidades.html">Unidades de medida</a>
+		<li>Examen Parcial 2</li>
+		<a href="ExamenP2.html">Examen Parcial 2</a>
 	</ol>
 	<li>Parcial 3</li>
 	<li>Proyecto Final</li>
