--- a/Formulario.html
+++ b/Formulario.html
@@ -17,6 +17,7 @@
     </style>
 </head>
 <body>
+    <a href="index.html">Volver al inicio</a>
     <h1 style="text-align:center;">Volkswagen Potosina</h1>
     <h2 style="text-align:center;">Compras online</h2>
 
