--- a/Tablas.html
+++ b/Tablas.html
@@ -9,6 +9,8 @@
 		</style>
 	</head>
 	<body>
+		<a href="index.html">Volver al inicio</a>
+
 		<h1 align="center">Tablas en HTML</h1>
 		
 	<section>
