--- a/BarraNav1.html
+++ b/BarraNav1.html
@@ -9,6 +9,7 @@
 		</style>	
 	</head>
 	<body>
+		<a href="index.html">Volver al inicio</a>
 		<h1 align="center">Barra de navegación</h1>
 		
 	<section>
