--- a/flexbox.html
+++ b/flexbox.html
@@ -7,6 +7,7 @@
 	<title>Flexbox en CSS</title>
 </head>
 <body>
+	<a href="index.html">Volver al inicio</a>
 	<div class="contenedor">
 	<header class="encabezado"> Titulo Principal</header>
 
