--- a/Position.html
+++ b/Position.html
@@ -7,6 +7,8 @@
 	<title>Propiedades position y z-index</title>
 </head>
 <body>
+	<a href="index.html">Volver al inicio</a>
+
 	<h1 class="p2">Propiedad Position</h1>
 	<p class="parrafo">
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
