--- a/ExamenP2.html
+++ b/ExamenP2.html
@@ -7,6 +7,7 @@
  <title>Examen práctico Parcial 2</title>
 </head>
 <body>
+<a href="index.html">Volver al inicio</a>
  <h1>Examen practico Parcial 2</h1>
   <h2>Sayra Miritza Ibarra Torres</h2>
 
