--- a/Formulario.html
+++ b/Formulario.html
@@ -50,7 +50,7 @@
                 <tr>
                     <td><label for="pais">País:</label></td>
                     <td>
-                        <select id="pais" name="pais" size="3">
+                        <select id="pais" name="pais">
                         
                             <option value="mexico">México</option>
                             <option value="canada">Canadá</option>
@@ -125,7 +125,7 @@
                     <td><label for="ciudad">Ciudad:</label></td>
                     <td>
                         <select id="ciudad" name="ciudad">
-                            <datalist>
+                           
                             <option value="slp">San Luis Potosí</option>
                             <option value="monterrey">Monterrey</option>
                             <option value="cd_valles">Cd. Valles</option>
