--- a/historia.html
+++ b/historia.html
@@ -25,6 +25,13 @@
 <div class="Thistory">
 	<img src="history.png" alt="Historia del Rebozo">
 	<div class="texto"><h1>HISTORIA</h1></div>
+	<div class="historia-container">
+  <img id="historia-imagen" src="" alt="Imagen historia del rebozo" style="width:100%; max-height:300px; object-fit:cover; border-radius:10px; margin-bottom:15px;">
+  <p id="historia-texto"></p>
+  <div class="botones">
+    <button onclick="anterior()">Anterior</button>
+    <button onclick="siguiente()">Siguiente</button>
+  </div>
 
 </div>
 <p class="columnas">
