--- a/Preguntas.html
+++ b/Preguntas.html
@@ -68,6 +68,18 @@
   </style>
 </head>
 <body>
+	<div class="inicio">
+		<nav class="navbar">
+			<ul>
+				<li><a href="home.html">HOME</a></li>
+				<li><a href="elaboracion.html">ELABORACION</a></li>
+				<li><a href="comercio.html">COMERCIO</a></li>
+				<li><a href="noticias.html">NOTICIAS</a></li>
+				<li><a href="contacto.html">CONTACTO</a></li>
+				<li><a href="Preguntas.html">PREGUNTAS FRECUENTES</a></li>
+			</ul>  
+        </nav>
+	</div>
 	<section id="faq" style="padding: 40px; font-family: Arial, sans-serif;">
   <h2>Preguntas Frecuentes</h2>
   <ul>
