--- a/contacto.html
+++ b/contacto.html
@@ -28,6 +28,7 @@
 				<li><a href="elaboracion.html">ELABORACIÓN</a></li>
 				<li><a href="comercio.html">COMERCIO</a></li>
 				<li><a href="noticias.html">NOTICIAS</a></li>
+				<li><a href="Preguntas.html">PREGUNTAS FRECUENTES</a></li>
 				
 			</ul>  
         </nav>
