--- a/comercio.html
+++ b/comercio.html
@@ -19,6 +19,7 @@
 				<li><a href="elaboracion.html">ELABORACIÓN</a></li>
 				<li><a href="noticias.html">NOTICIAS</a></li>
 				<li><a href="contacto.html">CONTACTO</a></li>
+				<li><a href="Preguntas.html">PREGUNTAS FRECUENTES</a></li>
 			</ul>  
         </nav>
 	</div>
