--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 	</div>
 	</div>
 	<div class="media">
-		<h1>Seguímos haciedno historia</h1>
+		<h1>Seguímos haciendo historia</h1>
 	</div>
 	<div class="video-container">
     	<iframe width="560" height="315" src="https://www.youtube.com/embed/dPVC9SRCqVQ?si=Xa61px2Nog47uCjT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
