--- a/historia.html
+++ b/historia.html
@@ -26,7 +26,7 @@
 <div class="Thistory">
 	<img src="history.png" alt="Historia del Rebozo">
 	<div class="texto"><h1>HISTORIA</h1></div>
-	<div class="historia-container">
+	<!--<div class="historia-container">
   <img id="historia-imagen" src="" alt="Imagen historia del rebozo" style="width:100%; max-height:300px; object-fit:cover; border-radius:10px; margin-bottom:15px;">
   <p id="historia-texto"></p>
   <div class="botones">
@@ -34,7 +34,7 @@
     <button onclick="siguiente()">Siguiente</button>
   </div>
 
-</div>
+</div>-->
 <p class="columnas">
 		Popularmente, se le conoce al municipio de Santa María del Río como “la cuna del rebozo”, ya que el arte y dedicación que empeñan en la creación de estas prendas destaca entre muchos otros. Su origen, se remonta al sincretismo entre el arte de frailes e indígenas otomíes, combinación que dio forma a los rebozos que conocemos al día de hoy
 	</p>
