--- a/Operaciones1.html
+++ b/Operaciones1.html
@@ -40,6 +40,7 @@
 	</script>
 </head>
 <body>
+	<a href="index.html">Volver al inicio</a>
 	<form>
 		<label for="num1">Número:</label>
 		<input type="text" name="num1" id="num1" placeholder="Número 1"><br>
