--- a/LecturaForm.html
+++ b/LecturaForm.html
@@ -7,6 +7,7 @@
 	<script src="LecturaForm1.js"></script>
 </head>
 <body>
+	<a href="index.html">Volver al inicio</a>
 	<h1>Registro de usuario</h1>
 	<form name="formulario">
 		<label for="user">Nombre:</label>
