--- a/Practica3P3.html
+++ b/Practica3P3.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-
+<a href="index.html">Volver al inicio</a>
 <h1>Formulario de Diagnóstico - Fundamentos de HTML</h1>
 
 <form id="quizForm">
