--- a/ExamenP3.html
+++ b/ExamenP3.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+    <a href="index.html">Volver al inicio</a>
     <div class="container">
         <h1 >Calculadora tu Propina</h1>
         <form id="tipForm">
