--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
 
 	<ul>
 	<li>Inicio</li>
-	<li>Parcial 1</li>
-	<ol>
-	<li>Practica 1</li>
-	<li>Practica 2</li>
-	<li>Practica 3</li>
-	</ol>
+		<li>Parcial 1</li>
+		<a href="index.html">Index</a>
+		<li>Parcial 2</li>
+		<a href="Practica2_Tablas_176453.html">Tablas</a>
+		<li>Parcial 3</li>
+		<a href="Practica3.html">Iframe</a>
+		<li>Examen P1</li>
+		<a href="ExamenPractico_P1.html">Examen Parcial I</a>
 	
 	<li>Parcial 2</li>
 	<ol>
@@ -101,7 +103,16 @@
 		<a href="ExamenP2.html">Examen Parcial 2</a>
 	</ol>
 	<li>Parcial 3</li>
+		<li>Practica 1</li>
+		<a href="Operaciones1.html">Operaciones</a>
+		<li>Practica 2</li>
+		<a href="LecturaForm.html">Lectura Formulario</a>
+		<li>Practica 3</li>
+		<a href="Practica3P3.html">Formulario de diagnostico</a>
+		<li>Examen Parial 3</li>
+		<a href="ExamenP3.html">Examen Parcial 3</a>
 	<li>Proyecto Final</li>
+		
 	</ul>
 	
 	</section>
