--- a/Practica2_Tablas_176453.html
+++ b/Practica2_Tablas_176453.html
@@ -29,7 +29,8 @@
 	<h1 style="text-align: center;">Electronica</h1>
 	<h2 style="text-align: center;">Lista de Productos</h2>
 </header>
-<body>s
+<body>
+	 <a href="index.html">Volver al inicio</a>
 	
 	<table style="border:2px solid blue;width: 80%;margin:;color: black;">
 		<tr>
