--- a/Practica3.html
+++ b/Practica3.html
@@ -30,6 +30,7 @@
     </style>
     </head>
 	<body>
+		<a href="index.html">Volver al inicio</a>
 		<h1 style="text-align:center;">SISTEMA SOLAR</h1>
 
 		<table  style="border:2px solid black;width: 75%;margin: auto;background:skyblue;color: black;">
