--- a/ExamenPractico_P1.html
+++ b/ExamenPractico_P1.html
@@ -7,6 +7,7 @@
 	<title>Turismo de san luis potosi</title>
 </head>
 <body>
+	<a href="index.html">Volver al inicio</a>
 	<hgroup" style="text-align: center;">
 		<h1 style="color: blue;">Programacion Web </h1>
 		<h2 style="color: blue">Evaluacion Practica Parcial 1</h2>
