--- a/index.html
+++ b/index.html
@@ -71,13 +71,17 @@
 	<ul>
 	<li>Inicio</li>
 		<li>Parcial 1</li>
+		<ol>
+		<li>Practica 1</li>
 		<a href="index.html">Index</a>
-		<li>Parcial 2</li>
+		<li>Practica 2</li>
 		<a href="Practica2_Tablas_176453.html">Tablas</a>
-		<li>Parcial 3</li>
+		<li>Practica 3</li>
 		<a href="Practica3.html">Iframe</a>
 		<li>Examen P1</li>
 		<a href="ExamenPractico_P1.html">Examen Parcial I</a>
+		</ol>
+		
 	
 	<li>Parcial 2</li>
 	<ol>
