--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<h2>Practicas Portafolio </h2>
 
 	<ul>
-	<li>Inicio</li>
+	<li>INICIO</li>
 		<li>Parcial 1</li>
 		<ol>
 		<li>Practica 1</li>
@@ -107,6 +107,7 @@
 		<a href="ExamenP2.html">Examen Parcial 2</a>
 	</ol>
 	<li>Parcial 3</li>
+		<ol>
 		<li>Practica 1</li>
 		<a href="Operaciones1.html">Operaciones</a>
 		<li>Practica 2</li>
@@ -115,7 +116,8 @@
 		<a href="Practica3P3.html">Formulario de diagnostico</a>
 		<li>Examen Parial 3</li>
 		<a href="ExamenP3.html">Examen Parcial 3</a>
-	<li>Proyecto Final</li>
+		<li>Proyecto Final</li>	
+		</ol>
 		
 	</ul>
 	
