--- a/home.html
+++ b/home.html
@@ -1,38 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="home.css">
-	<link rel="icon" type="image/jpeg" href="logor.jpg">
-	<title>HOME</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="home2.css">
+  <link rel="icon" type="image/jpeg" href="logor.jpg">
+  <title>Rebozos</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div class="inicio">
-		<nav class="navbar">
-			<ul>
-				<li><a href="historia.html">HISTORIA</a></li>
-				<li><a href="elaboracion.html">ELABORACIÓN</a></li>
-				<li><a href="comercio.html">COMERCIO</a></li>
-				<li><a href="noticias.html">NOTICIAS</a></li>
-				<li><a href="contacto.html">CONTACTO</a></li>
-				<li><a href="Preguntas.html">PREGUNTAS FRECUENTES</a></li>
-			</ul>  
-        </nav>
-        <img src="interior.webp" alt="Interior del Museo">
-        <div class="texto1">
-		<h1>Museo</h1><br>
-		<h1>"Casa del Rebozo"</h1>
-	</div>
-	</div>
-	<div class="media">
-		<h1>Seguímos haciendo historia</h1>
-	</div>
-	<div class="video-container">
-    	<iframe width="560" height="315" src="https://www.youtube.com/embed/dPVC9SRCqVQ?si=Xa61px2Nog47uCjT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
+  <header>
+    <nav class="navbar">
+      <div class="logo">REBOZOS</div>
+      <ul class="nav-links">
+        <li><a href="#galeria">Galería</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="#faq">Preguntas Frecuentes</a></li>
+      </ul>
+    </nav>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Rebozos</h1>
+        <p>Una tradición viva que une generaciones a través del arte textil.</p>
+      </div>
+      <div class="hero-image">
+        <img src="re1.png" width="400" height="300"alt="Mujeres con rebozos" />
+      </div>
+    </section>
+  </header>
+
+  <main>
+    <section class="info-cards">
+      <a class="card-link" href="historia.html">
+        <div class="card" style="background-color: #4aa3df;">
+          <h3>Historia</h3>
+          <p>Desde la época colonial hasta la actualidad, el rebozo ha sido símbolo de identidad.</p>
+        </div>
+      </a>
+      <a class="card-link" href="elaboracion.html">
+        <div class="card" style="background-color: #f4c542;">
+          <h3>Elaboración</h3>
+          <p>Desde el teñido hasta el telar, el proceso es completamente artesanal.</p>
+        </div>
+      </a>
+      <a class="card-link" href="comercio.html">
+        <div class="card" style="background-color: #2db8a3;">
+          <h3>Comercio</h3>
+          <p>Los rebozos se exportan a nivel internacional como piezas de arte textil.</p>
+        </div>
+      </a>
+      <a class="card-link" href="noticias.html">
+        <div class="card" style="background-color: #1d79c2;">
+          <h3>Noticias</h3>
+          <p>Eventos culturales y exposiciones de rebozos en todo México y el mundo.</p>
+        </div>
+      </a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Tradición Textil Mexicana | <a href="#contacto" style="color: #fff;">Contacto</a> | <a href="#faq" style="color: #fff;">Preguntas Frecuentes</a></p>
+  </footer>
 </body>
 </html>
+
