--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
       <ul class="nav-links">
         <li><a href="#galeria">Galería</a></li>
         <li><a href="#blog">Blog</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-        <li><a href="#faq">Preguntas Frecuentes</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="Preguntas.html">Preguntas Frecuentes</a></li>
       </ul>
     </nav>
     <section class="hero">
