--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <div class="logo">REBOZOS</div>
       <ul class="nav-links">
-        <li><a href="#galeria">Galería</a></li>
+        <li><a href="galeria.html">Galería</a></li>
         <li><a href="#blog">Blog</a></li>
         <li><a href="contacto.html">Contacto</a></li>
         <li><a href="Preguntas.html">Preguntas Frecuentes</a></li>
