--- a/galeria.html
+++ b/galeria.html
@@ -12,7 +12,7 @@
       <h1>Galería de Rebozos</h1>
       <p class="subtitle">Arte textil mexicano que trasciende generaciones</p>
       <nav>
-        <a href="home.html">Inicio</a>
+        <a href="home.html">Home</a>
         <a href="historia.html">Historia</a>
         <a href="elaboracion.html">Elaboración</a>
         <a href="comercio.html">Comercio</a>
