--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
     <nav class="navbar">
       <div class="logo">REBOZOS</div>
       <ul class="nav-links">
-        <li><a href="Galeria.html">Galería</a></li>
-        <li><a href="Contacto.html">Contacto</a></li>
+        <li><a href="galeria.html">Galería</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
         <li><a href="Preguntas.html">Preguntas Frecuentes</a></li>
       </ul>
     </nav>
