--- a/Preguntas.html
+++ b/Preguntas.html
@@ -7,6 +7,12 @@
 	<title>Preguntas frecuentes</title>
 	
 </head>
+	<!-- Chatbot de Chatling -->
+<script>
+  window.chtlConfig = { chatbotId: "7461173926" }
+</script>
+<script async data-id="7461173926" id="chtl-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+
 <body>
 	<div class="inicio">
 		<nav class="navbar">
@@ -82,7 +88,5 @@
     </div>
   </div>
 </section>
-<script> window.chtlConfig = { chatbotId: "7461173926" } </script>
-<script async data-id="7461173926" id="chtl-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 </body>
 </html>
