--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,7 @@
   <main>
     <section class="intro">
       <h2>Explora nuestra colección</h2>
-      <p>Esta galería destaca la belleza y diversidad de los rebozos mexicanos, elaborados artesanalmente con técnicas tradicionales. Cada pieza cuenta una historia única.</p>
+      <p>Esta galería destaca la belleza y diversidad de los rebozos de Santa Maria del Rio, elaborados artesanalmente con técnicas tradicionales. Cada pieza cuenta una historia única.</p>
     </section>
 
     <section class="gallery">
